Support Java parameterized test cases
From maven-surefire-plugin:3.0.0-M6 onwards method filtering (thus parameters) are supported in includesFile and excludesFile.

Add new testmode that allows to split and run in parallel Java parameterized tests. The JavaTestCaseName mode is retained for backwards compatibility reasons.

--- a/src/main/resources/org/jenkinsci/plugins/parallel_test_executor/testmode/JavaParameterizedTestCaseName/help.html
+++ b/src/main/resources/org/jenkinsci/plugins/parallel_test_executor/testmode/JavaParameterizedTestCaseName/help.html
@@ -1,7 +1,7 @@
 <div>
     This mode works best with Java projects.
     <p>
-    Parallelize per Java test case ignoring parameters. If parameters are present they are considered the same test.
+    Parallelize per Java test case including parameters.
     <p>
     It is also able to estimate tests (per class) to run from the workspace content if no historical context could be found.
 </div>
